force-app/main/default/objects/Account/fields/Best_contact_for_the_finance_system__c.field-meta.xml
<CustomField>
    <fullName>Best_contact_for_the_finance_system__c</fullName>
    <label>Best contact for the finance system?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>