force-app/main/default/objects/Account/fields/BH_Audit_Fee__c.field-meta.xml
<CustomField>
    <fullName>BH_Audit_Fee__c</fullName>
    <label>BH Audit Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>