force-app/main/default/objects/Account/fields/CP_Digital_Team__c.field-meta.xml
<CustomField>
    <fullName>CP_Digital_Team__c</fullName>
    <label>CP Digital Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>