force-app/main/default/objects/Account/fields/CP_External_ID__c.field-meta.xml
<CustomField>
    <fullName>CP_External_ID__c</fullName>
    <label>CP External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>