force-app/main/default/objects/Account/fields/Data_Origination__c.field-meta.xml
<CustomField>
    <fullName>Data_Origination__c</fullName>
    <label>Data Origination (DO NOT USE)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>