force-app/main/default/objects/Account/fields/Did_you_ask_about_CRM_ERP__c.field-meta.xml
<CustomField>
    <fullName>Did_you_ask_about_CRM_ERP__c</fullName>
    <label>Did you ask about CRM &amp; ERP?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>