force-app/main/default/objects/Account/fields/DocuSign_Document_Sub_List__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Document_Sub_List__c</fullName>
    <label>DocuSign Document Sub List</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DocuSign_Documents__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>DocuSign_Document_Sub_List</valueSetName>
    </valueSet>
</CustomField>