force-app/main/default/objects/Account/fields/DocuSign_Document_Sub_List_Cont__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Document_Sub_List_Cont__c</fullName>
    <label>DocuSign Document Sub List Cont.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DocuSign_Document_Sub_List</valueSetName>
    </valueSet>
</CustomField>