force-app/main/default/objects/Account/fields/DocuSign_Documents__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Documents__c</fullName>
    <label>DocuSign Documents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DocuSign_Documents</valueSetName>
    </valueSet>
</CustomField>