force-app/main/default/objects/Account/fields/DocuSign_Documents_Cont__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Documents_Cont__c</fullName>
    <label>DocuSign Documents Cont.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DocuSign_Documents</valueSetName>
    </valueSet>
</CustomField>