force-app/main/default/objects/Account/fields/Latest_Valuation__c.field-meta.xml
<CustomField>
    <fullName>Latest_Valuation__c</fullName>
    <label>Latest Valuation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>