force-app/main/default/objects/Account/fields/Other_CRM_System__c.field-meta.xml
<CustomField>
    <fullName>Other_CRM_System__c</fullName>
    <label>Other CRM System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>