force-app/main/default/objects/Account/fields/Other_Finance_System__c.field-meta.xml
<CustomField>
    <fullName>Other_Finance_System__c</fullName>
    <label>Other Finance System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>