force-app/main/default/objects/Account/fields/Primary_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_ID__c</fullName>
    <formula>IF(ISBLANK(Legacy_Account_ID__c), CP_Client_ID__c, Legacy_Account_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Account ID</label>
    <type>Text</type>
</CustomField>