force-app/main/default/objects/Account/fields/Primary_Date__c.field-meta.xml
<CustomField>
    <fullName>Primary_Date__c</fullName>
    <label>Primary Date</label>
    <type>Date</type>
</CustomField>