force-app/main/default/objects/Account/fields/Sharepoint_Public_URL__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Public_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://cooperparry1.sharepoint.com/:f:/r/account/&quot;&amp; Sharepoint_Public_Folder_URL__c ,&quot;Click Here&quot;)</formula>
    <label>Sharepoint Public URL</label>
    <type>Text</type>
</CustomField>