force-app/main/default/objects/Account/fields/Sharepoint_Secured_URL__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Secured_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://cooperparry1.sharepoint.com/:f:/r/Secure%20Documents/&quot;&amp;Sharepoint_Secure_Folder_URL__c,&quot;Click Here&quot;)</formula>
    <label>Sharepoint Secured URL</label>
    <type>Text</type>
</CustomField>