force-app/main/default/objects/Account/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>The Source Field can be updated only using the Source button at the top of the page</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>