force-app/main/default/objects/Account/fields/Stage_After__c.field-meta.xml
<CustomField>
    <fullName>Stage_After__c</fullName>
    <label>Stage After</label>
    <length>255</length>
    <type>Text</type>
</CustomField>