force-app/main/default/objects/Account/fields/Stage_Before__c.field-meta.xml
<CustomField>
    <fullName>Stage_Before__c</fullName>
    <label>Stage Before</label>
    <length>255</length>
    <type>Text</type>
</CustomField>