force-app/main/default/objects/Account/fields/Stamp_Data_Origination__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Data_Origination__c</fullName>
    <label>Stamp - Data Origination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>