force-app/main/default/objects/Account/fields/Total_Amount_of_Grants__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Grants__c</fullName>
    <label>Total Amount of Grants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>