force-app/main/default/objects/Account/fields/What_CRM_do_you_use__c.field-meta.xml
<CustomField>
    <fullName>What_CRM_do_you_use__c</fullName>
    <label>What CRM do you use?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>What_CRM_do_you_use</valueSetName>
    </valueSet>
</CustomField>