force-app/main/default/objects/Account/fields/Who_is_the_best_contact_for_the_CRM__c.field-meta.xml
<CustomField>
    <fullName>Who_is_the_best_contact_for_the_CRM__c</fullName>
    <label>Who is the best contact for the CRM?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>