force-app/main/default/objects/Account/validationRules/V7_DocuSign_SubList.validationRule-meta.xml
<ValidationRule>
    <fullName>V7_DocuSign_SubList</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT($Setup.Org_Wide_Settings__c.Disable_Validation_Rules__c),
 NOT(ISBLANK(TEXT(DocuSign_Document_Sub_List_Cont__c))),
 NOT(ISBLANK(TEXT(DocuSign_Document_Sub_List__c)))
)</errorConditionFormula>
    <errorMessage>You can only select either Sub List, or Sub List Cont.</errorMessage>
</ValidationRule>