force-app/main/default/objects/Account/validationRules/V8_Type_Client.validationRule-meta.xml
<ValidationRule>
    <fullName>V8_Type_Client</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT($Setup.Org_Wide_Settings__c.Disable_Validation_Rules__c),
 ISCHANGED(Type),
 TEXT(Type) = &apos;Client&apos;,
 ISBLANK(Date_became_client__c)
)</errorConditionFormula>
    <errorMessage>The Onboarding has to be completed first.</errorMessage>
</ValidationRule>